[package]
name = "rtmp-rs"
version = "0.5.0"
edition = "2021"
authors = ["Jeff Torres"]
description = "RTMP client/server library"
license = "MIT"
repository = "https://github.com/torresjeff/rtmp-rs"
keywords = ["rtmp", "streaming", "video", "live"]
categories = ["multimedia::video", "network-programming"]
exclude = [
    "assets/*",
]

[dependencies]
tokio = { version = "1", features = ["full"] }
bytes = "1"
tracing = "0.1"

[dev-dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-test = "0.4"

[[example]]
name = "simple_server"
path = "examples/simple_server.rs"

[[example]]
name = "puller"
path = "examples/puller.rs"

[[example]]
name = "flv_recorder_client"
path = "examples/flv_recorder_client.rs"

[[example]]
name = "flv_recorder_server"
path = "examples/flv_recorder_server.rs"
